--- a/objectflow.core.tests/objectflow.core.Tests.csproj
+++ b/objectflow.core.tests/objectflow.core.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <TrainlineToolsPath>C:\dev</TrainlineToolsPath>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -10,7 +11,7 @@
     <ProjectGuid>{F1C234BA-0259-43E8-8EC8-A022A987EAAA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>objectflow.core.tests</RootNamespace>
+    <RootNamespace>Objectflow.core.tests</RootNamespace>
     <AssemblyName>objectflow.core.tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -18,6 +19,7 @@
     <StyleCopTreatErrorsAsWarnings>true</StyleCopTreatErrorsAsWarnings>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <BaseIntermediateOutputPath>..\compile\obj\</BaseIntermediateOutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -35,13 +37,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.0.9122, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>{TrainlineToolsPath}\Tools\Nunit\bin\net-2.0\framework\nunit.framework.dll</HintPath>
-    </Reference>
+    <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\svn\trumps\src\shared\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -57,20 +56,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Framework35\Syntax\FuncSyntax.cs" />
+    <Compile Include="Concurrency\AndSpec.cs" />
+    <Compile Include="Concurrency\ThenSpec.cs" />
+    <Compile Include="Concurrency\WhenDefiningParallelWorkflows.cs" />
+    <Compile Include="Concurrency\WhenParallisingOperations.cs" />
+    <Compile Include="Syntax\FuncSyntax.cs" />
     <Compile Include="Framework35\WhenDefiningFunctionalPipe.cs" />
     <Compile Include="Framework35\WhenExecutingFunctions.cs" />
+    <Compile Include="Syntax\SimpleConcurrency.cs" />
     <Compile Include="Syntax\WorkFlowSyntax.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDomain\Colour.cs" />
     <Compile Include="TestOperations\DoubleSpace.cs" />
     <Compile Include="TestOperations\DuplicateName.cs" />
+    <Compile Include="WhenConfiguringListWorkflows.cs" />
+    <Compile Include="WhenDefiningWorkflows.cs" />
     <Compile Include="WhenEvaluatingConditions.cs" />
     <Compile Include="WhenConfiguringWorkflow.cs" />
     <Compile Include="WhenEvaluatingLamndaConstraints.cs" />
     <Compile Include="WhenEvaluatingTypeConstraints.cs" />
     <Compile Include="WhenExecutingOperation.cs" />
     <Compile Include="WhenNegatingConstraints.cs" />
+    <Compile Include="WhenStartingParallelWorkflows.cs" />
+    <Compile Include="WhenStartingWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\objectflow.core\objectflow.core.csproj">
