--- a/objectflow.core/objectflow.core.csproj
+++ b/objectflow.core/objectflow.core.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chess.cs" />
     <Compile Include="Constraints\Operators\ConstraintOperator.cs" />
     <Compile Include="Constraints\Operators\NotConstraintOperator.cs" />
     <Compile Include="Constraints\BooleanCheckConstraint.cs" />
@@ -70,7 +71,7 @@
     <Compile Include="Engine\ParallelBuilder.cs" />
     <Compile Include="Engine\WorkflowEngine.cs" />
     <Compile Include="Engine\OperationConstraintPair.cs" />
-    <Compile Include="Framework\WorkflowMemoryLoader.cs" />
+    <Compile Include="Framework\PipelineMemoryLoader.cs" />
     <Compile Include="Helpers\If.cs" />
     <Compile Include="Framework\BasicOperation.cs" />
     <Compile Include="Engine\WorkflowBuilder.cs" />
@@ -83,8 +84,12 @@
     <Compile Include="Framework\Workflow.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Diagrams\Adapters.cd" />
+    <None Include="Diagrams\Constraints.cd" />
+    <None Include="Diagrams\Pipes.cd" />
     <None Include="RainbowObjectflow.pfx" />
   </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
