--- a/objectflow.core.tests/objectflow.core.Tests.csproj
+++ b/objectflow.core.tests/objectflow.core.Tests.csproj
@@ -1,6 +1,7 @@
 ﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>strongKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,6 +37,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq, Version=4.0.10531.7, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.5.10112, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -62,6 +67,7 @@
     <Compile Include="Syntax\FuncSyntax.cs" />
     <Compile Include="Framework35\WhenDefiningFunctionalPipe.cs" />
     <Compile Include="Framework35\WhenExecutingFunctions.cs" />
+    <Compile Include="Syntax\RepeatLoop.cs" />
     <Compile Include="Syntax\SimpleConcurrency.cs" />
     <Compile Include="Syntax\WorkFlowSyntax.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,21 +75,28 @@
     <Compile Include="TestOperations\DoubleSpace.cs" />
     <Compile Include="TestOperations\DuplicateName.cs" />
     <Compile Include="WhenConfiguringListWorkflows.cs" />
+    <Compile Include="WhenDefiningCompositeWorkflows.cs" />
     <Compile Include="WhenDefiningWorkflows.cs" />
     <Compile Include="WhenEvaluatingConditions.cs" />
     <Compile Include="WhenConfiguringWorkflow.cs" />
     <Compile Include="WhenEvaluatingLamndaConstraints.cs" />
     <Compile Include="WhenEvaluatingTypeConstraints.cs" />
     <Compile Include="WhenExecutingOperation.cs" />
+    <Compile Include="WhenHandlingWorkflowEngineExceptions.cs" />
+    <Compile Include="WhenInvokingWorkflows.cs" />
     <Compile Include="WhenNegatingConstraints.cs" />
     <Compile Include="WhenStartingParallelWorkflows.cs" />
     <Compile Include="WhenStartingWorkflow.cs" />
+    <Compile Include="WhenUsingCondition.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\objectflow.core\objectflow.core.csproj">
       <Project>{18BFC8BB-222C-4FB4-A949-36EF486E2D23}</Project>
       <Name>objectflow.core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="strongKey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
