--- a/objectflow.core.tests/objectflow.core.Tests.csproj
+++ b/objectflow.core.tests/objectflow.core.Tests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>strongKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -27,6 +28,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -64,10 +67,13 @@
     <Compile Include="Concurrency\ThenSpec.cs" />
     <Compile Include="Concurrency\WhenDefiningParallelWorkflows.cs" />
     <Compile Include="Concurrency\WhenParallisingOperations.cs" />
+    <Compile Include="Policy\WhenBuildingRetry.cs" />
+    <Compile Include="Policy\WhenExecutingInvokerWithPolicy.cs" />
+    <Compile Include="Policy\WhenUsingIntervalPolicy.cs" />
     <Compile Include="Syntax\FuncSyntax.cs" />
     <Compile Include="Framework35\WhenDefiningFunctionalPipe.cs" />
     <Compile Include="Framework35\WhenExecutingFunctions.cs" />
-    <Compile Include="Syntax\RepeatLoop.cs" />
+    <Compile Include="Syntax\RetryLoop.cs" />
     <Compile Include="Syntax\SimpleConcurrency.cs" />
     <Compile Include="Syntax\WorkFlowSyntax.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,11 +82,9 @@
     <Compile Include="TestOperations\DuplicateName.cs" />
     <Compile Include="WhenConfiguringListWorkflows.cs" />
     <Compile Include="WhenDefiningCompositeWorkflows.cs" />
-    <Compile Include="WhenDefiningWorkflows.cs" />
     <Compile Include="WhenEvaluatingConditions.cs" />
     <Compile Include="WhenConfiguringWorkflow.cs" />
     <Compile Include="WhenEvaluatingLamndaConstraints.cs" />
-    <Compile Include="WhenEvaluatingTypeConstraints.cs" />
     <Compile Include="WhenExecutingOperation.cs" />
     <Compile Include="WhenHandlingWorkflowEngineExceptions.cs" />
     <Compile Include="WhenInvokingWorkflows.cs" />
@@ -94,9 +98,6 @@
       <Project>{18BFC8BB-222C-4FB4-A949-36EF486E2D23}</Project>
       <Name>objectflow.core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="strongKey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
