--- a/objectflow.demo/objectflowDemo.csproj
+++ b/objectflow.demo/objectflowDemo.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{87B114A4-2B84-4A76-8281-5D57B7F81570}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -33,9 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="objectflow.core, Version=1.2.0.0, Culture=neutral, PublicKeyToken=f53a9149e8cfefaa, processorArchitecture=MSIL">
+    <Reference Include="objectflow.core, Version=1.3.1.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\compile\objectflow.core\bin\debug\objectflow.core.dll</HintPath>
+      <HintPath>..\compile\Release\objectflow.core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
