Finished converting to VS 2010
git-svn-id: https://objectflow.svn.codeplex.com/svn@54956 0e2699bc-83d4-4a8f-98e7-55e24ab8c7a5

--- a/objectflow.core.integration/objectflow.core.tests.integration.csproj
+++ b/objectflow.core.integration/objectflow.core.tests.integration.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>objectflow.core.tests.integration</RootNamespace>
     <AssemblyName>objectflow.core.tests.integration</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>
@@ -61,10 +61,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Rainbow.Nunit.Extensions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f53a9149e8cfefaa, processorArchitecture=MSIL">
+    <Reference Include="Rainbow.Nunit.Extensions">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Rainbow.Nunit.Extensions.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
