--- a/objectflow.core.tests/objectflow.core.tests.unit.csproj
+++ b/objectflow.core.tests/objectflow.core.tests.unit.csproj
@@ -107,6 +107,7 @@
     <Compile Include="RepeatUntil\WhenTerminatingRepeat.cs" />
     <Compile Include="RepeatUntil\WhenUsingRepeatPolicy.cs" />
     <Compile Include="Testability\WhenUnitTestingWorkflow.cs" />
+    <Compile Include="StatefulWorkflows\WhenStartingFromScratch.cs" />
     <Compile Include="TestOperations\Colour.cs" />
     <Compile Include="TestOperations\DoubleSpace.cs" />
     <Compile Include="TestOperations\DuplicateName.cs" />
