Added a container class for workflow definitions
Added classes and interfaces that allows workflows to be abstracted.  This allows re-use of workflow definitions and more comprehensible code.

see AsAWorkflow<T> class


git-svn-id: https://objectflow.svn.codeplex.com/svn@56306 0e2699bc-83d4-4a8f-98e7-55e24ab8c7a5

--- a/NunitExtensions/NunitExtensions.csproj
+++ b/NunitExtensions/NunitExtensions.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertionExtensions.cs" />
+    <Compile Include="AssertionExtensionsWithMessage.cs" />
     <Compile Include="ScenarioAttribute.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="ObservationAttribute.cs" />
