--- a/objectflow.core/objectflow.core.csproj
+++ b/objectflow.core/objectflow.core.csproj
@@ -34,7 +34,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\compile\objectflow.core\bin\debug\objectflow.core.XML</DocumentationFile>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <CodeContractsEnableRuntimeChecking>False</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>False</CodeContractsRuntimeThrowOnFailure>
@@ -101,6 +101,9 @@
     <Compile Include="..\AssemblyInfo.cs">
       <Link>Properties\AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Framework\AsAWorkflow.cs" />
+    <Compile Include="Interfaces\IConfigureSequence.cs" />
+    <Compile Include="Interfaces\IExecuteWorkflow.cs" />
     <Compile Include="Policies\Repeat.cs" />
     <Compile Include="Language\IRepeat.cs" />
     <Compile Include="Properties\CommonAssemblyInfo.cs" />
