--- a/objectflow.demo/objectflowDemo.csproj
+++ b/objectflow.demo/objectflowDemo.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{87B114A4-2B84-4A76-8281-5D57B7F81570}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -12,6 +12,10 @@
     <AssemblyName>objectflowDemo</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <OldToolsVersion>3.5</OldToolsVersion>
+    <UpgradeBackupLocation />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <BaseIntermediateOutputPath>..\compile\objectflowDemo\obj\</BaseIntermediateOutputPath>
@@ -33,9 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="objectflow.core, Version=1.3.1.1, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="objectflow.core, Version=1.2.1.2, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\compile\Release\objectflow.core.dll</HintPath>
+      <HintPath>..\..\..\..\objectflow\objectflow.core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
