Added forward references for declared operations This also breaks the declared operations interface that has existed so far. Using C# 4.0 named parameter syntax makes this fluent interface clearer, but earlier versions are a bit more vague than previously

--- a/objectflow.core.tests/objectflow.core.tests.unit.csproj
+++ b/objectflow.core.tests/objectflow.core.tests.unit.csproj
@@ -85,7 +85,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComposeSequentialWorkflow\WhenStartingObjectWorkflows.cs" />
+    <Compile Include="DeclaredOperations\WithForwardReferences.cs" />
     <Compile Include="DeclaredOperations\WithOneDeclaredOperation.cs" />
+    <Compile Include="DeclaredOperations\WithRedefinitions.cs" />
     <Compile Include="FrameworkExtensions\WhenStartingWorkflowContainer.cs" />
     <Compile Include="FrameworkExtensions\RainbowWorkflow.cs" />
     <Compile Include="FunctionalWorkflows\WhenExecutingOperations.cs" />
