--- a/objectflow.stateful/objectflow.stateful.csproj
+++ b/objectflow.stateful/objectflow.stateful.csproj
@@ -52,9 +52,14 @@
   <ItemGroup>
     <Compile Include="IStatefulObject.cs" />
     <Compile Include="IStatefulWorkflow.cs" />
+    <Compile Include="ITransition.cs" />
+    <Compile Include="ITransitionGateway.cs" />
+    <Compile Include="IWorkflowFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulWorkflow.cs" />
     <Compile Include="StatefulWorkflowExtensions.cs" />
+    <Compile Include="Transition.cs" />
+    <Compile Include="WorkflowFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\objectflow.core\objectflow.core.csproj">
