--- a/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
+++ b/objectflow.stateful.tests.unit/objectflow.stateful.tests.unit.csproj
@@ -57,6 +57,8 @@
     <Compile Include="DeclaredOperationsStillWork\WithOneDeclaredOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatefulWorkflows\WhenStartingFromScratch.cs" />
+    <Compile Include="TransitionGateways\GivenBranchesAndYields.cs" />
+    <Compile Include="TransitionGateways\GivenOnlyBranches.cs" />
     <Compile Include="TransitionGateways\GivenOnlyYields.cs" />
   </ItemGroup>
   <ItemGroup>
